deployment/api-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  # Unique key of the Deployment instance
  name: api-deployment
spec:
  # 1 Pod should exist at all times.
  replicas: 1
  template:
    metadata:
      labels:
        # Apply this label to pods and default
        # the Deployment label selector to this value
        app: api-pod
    spec:
      imagePullSecrets: # use the secrets created before the deployment for authenticating with gitlab registry
        - name: registry.gitlab.com
      containers:
        - name: api-container
          image: registry.gitlab.com/lucabrena/pss_assignment_1/kubernetes/api
          imagePullPolicy: Always
          ports:
            - name: http-api
              containerPort: 7000
            - name: wsgi-api
              containerPort: 6000
