deployment/flask-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  # Unique key of the Deployment instance
  name: flask-deployment
spec:
  # 1 Pod should exist at all times.
  replicas: 1
  template:
    metadata:
      labels:
        # Apply this label to pods and default
        # the Deployment label selector to this value
        app: flask-pod
    spec:
      imagePullSecrets: # use the secrets created before the deployment for authenticating with gitlab registry
        - name: registry.gitlab.com
      containers:
        - name: flask-container
          image: registry.gitlab.com/lucabrena/pss_assignment_1/flask:latest
          ports:
            - name: http-flask
              containerPort: 5000
