deployment/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  selector:
    app: api-pod
  ports:
    - name: http-api
      port: 7000
      targetPort: 7000
      protocol: TCP
    - name: wsgi-api
      port: 6000
      targetPort: 6000
      protocol: TCP
